<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_my_profile"
            android:icon="@drawable/profile_svg"
            android:title="@string/nav_my_profile" />

        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/history_svg"
            android:title="@string/history" />
        <item
            android:id="@+id/nav_coins"
            android:icon="@drawable/coins_png"
            android:title="@string/Coins" />

        <item
            android:id="@+id/nav_redeem"
            android:icon="@drawable/redeem_svg"
            android:title="@string/Redeem" />
    </group>
    <group>
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_nav_sign_out"
            android:title="@string/nav_sign_out"/>

    </group>
</menu>